## ch1. Intro.
add_executable(asio1_endpoint_client ch1_intro/endpoint_client.cpp)
add_executable(asio1_endpoint_server ch1_intro/endpoint_server.cpp)
add_executable(asio1_active_tcp_socket ch1_intro/active_tcp_socket.cpp)
add_executable(asio1_active_udp_socket ch1_intro/active_udp_socket.cpp)
add_executable(asio1_passive_tcp_socket ch1_intro/passive_tcp_socket.cpp)
add_executable(asio1_resolving_dns_tcp ch1_intro/resolving_dns.cpp)
add_executable(asio1_bind_to_endpoint ch1_intro/bind_to_endpoint.cpp)
add_executable(asio1_connect_socket ch1_intro/connect_socket.cpp)
add_executable(asio1_connect_dns ch1_intro/connect_dns.cpp)
add_executable(asio1_accept_connection ch1_intro/accept_connection.cpp)

## ch2. I/O
add_executable(asio2_fixed_length_buffer ch2_io/fixed_length_buffer.cpp)
add_executable(asio2_extensible_streambuffer ch2_io/extensible_streambuffer.cpp)
add_executable(asio2_write_to_tcp_sync ch2_io/write_to_tcp_sync.cpp)
add_executable(asio2_read_from_tcp_sync ch2_io/read_from_tcp_sync.cpp)
add_executable(asio2_write_to_tcp_async ch2_io/write_to_tcp_async.cpp)
add_executable(asio2_cancel_async_operation ch2_io/cancel_async_operation.cpp)

add_executable(asio2_socket_shutdown_server ch2_io/socket_shutdown_server.cpp)
add_executable(asio2_socket_shutdown_client ch2_io/socket_shutdown_client.cpp)
add_executable(asio2_socket_shutdown_client1 ch2_io/socket_shutdown_client1.cpp)

## ch3. client
add_executable(asio3_sync_tcp_client ch3_client/sync_tcp_client.cpp)
add_executable(asio3_sync_udp_client ch3_client/sync_udp_client.cpp)
add_executable(asio3_async_tcp_client ch3_client/async_tcp_client.cpp)
add_executable(asio3_async_tcp_client_mt ch3_client/async_tcp_client_mt.cpp)

## ch4. server
add_executable(asio4_sync_iterative_tcp_server ch4_server/sync_iterative_tcp_server.cpp)
add_executable(asio4_sync_parallel_tcp_server ch4_server/sync_parallel_tcp_server.cpp)
add_executable(asio4_async_parallel_tcp_server ch4_server/async_parallel_tcp_server.cpp)
